syntax = "proto3";

package ua.marchenko.grpcapi.service.auction;

import "google/protobuf/empty.proto";
import "ua/marchenko/commonmodels/auction/auction.proto";
import "ua/marchenko/grpcapi/input/reqreply/auction/find_auction_by_id.proto";
import "ua/marchenko/grpcapi/input/reqreply/auction/create_auction.proto";

option java_multiple_files = true;

service AuctionService {

  rpc subscribeToAllAuctions (google.protobuf.Empty) returns (stream commonmodels.auction.Auction);

  rpc findAuctionById (input.reqreply.auction.FindAuctionByIdRequest) returns (input.reqreply.auction.FindAuctionByIdResponse);

  rpc createAuction (input.reqreply.auction.CreateAuctionRequest) returns (input.reqreply.auction.CreateAuctionResponse);
}
